chore: handle code review change requests